[package]
name = "shardy"
version = "0.1.0"
edition = "2024"
rust-version = "1.93"
authors = ["Vini B <https://github.com/vinibarbosabr>"]
description = "Developer & security-researcher CLI for NEAR Protocol – shard insight, gas & storage analysis, and more"
license = "MIT OR Apache-2.0"
repository = "https://github.com/vinibarbosabr/sharndy"
homepage = "https://github.com/vinibarbosabr/shardy"
readme = "README.md"
keywords = ["near", "near-protocol", "cli", "sharding", "security"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "shardy"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive", "env", "wrap_help"] }

# Async + error handling
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
anyhow = "1"
thiserror = "2"

# NEAR stack
near-jsonrpc-client = "0.22.0"
near-jsonrpc-primitives = "0.37.1"
near-primitives = "0.37.1"

# Serialization & utilities
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Nice terminal output
console = "0.16.4"
